--- a/exam-project/src/app/views/register/register.component.html
+++ b/exam-project/src/app/views/register/register.component.html
@@ -22,8 +22,8 @@
                 <label for="email"><span><i class="fas fa-envelope"></i></span></label>
                 <input type="email" formControlName="email" name="email" id="email" placeholder="john.doe@gmail.com">
             </p>
-            <ng-container *ngIf="form.get('name')?.touched">
-                <p class="error" *ngIf="form.get('name')?.errors?.['required']">
+            <ng-container *ngIf="form.get('email')?.touched">
+                <p class="error" *ngIf="form.get('email')?.errors?.['required']">
                     Email is required!
                 </p>
                 <p *ngIf="form.get('email')?.errors?.['validateEmail']" class="error">
