--- a/exam-project/src/app/views/register/register.component.html
+++ b/exam-project/src/app/views/register/register.component.html
@@ -38,7 +38,7 @@
                 <select name="select-tel" id="select-tel" class="tel">
                     <option value="00359">+359</option>
                 </select>
-                <input type="text" name="tel" id="tel" placeholder="885 888 888" formControlName="tel" required />
+                <input type="text" name="tel" id="tel" placeholder="885 888 888" formControlName="tel" />
             </p>
             <p class="error" *ngIf="form.get('tel')?.errors?.['required']">
                 Tell is required!
