--- a/exam-project/src/app/views/register/register.component.html
+++ b/exam-project/src/app/views/register/register.component.html
@@ -41,7 +41,7 @@
                 <input type="text" name="tel" id="tel" placeholder="885 888 888" formControlName="tel" />
             </p>
             <p class="error" *ngIf="form.get('tel')?.errors?.['required']">
-                Tell is required!
+                Tel is required!
             </p>
             <!-- <p class="error">
                 Password must be at least 5 characters!
