--- a/exam-project/src/app/views/register/register.component.html
+++ b/exam-project/src/app/views/register/register.component.html
@@ -11,7 +11,7 @@
 
                 <input class="input-error" formControlName="name" type="text" name="name" id="name" placeholder="Johny">
             </p>
-            <ng-container *ngIf="form.get('name')?.touched">
+            <ng-container *ngIf="form.get('name':string)?.touched">
                 <p class="error" *ngIf="form.get('name')?.errors?.['required']">
                     Name is required!
                 </p>
