--- a/exam-project/src/app/views/register/register.component.html
+++ b/exam-project/src/app/views/register/register.component.html
@@ -74,7 +74,7 @@
                 </ng-container>
             </ng-container>
 
-            <button [disabled]="form.invalid" [style]="{ backgroundColor: form.invalid ? 'grey' : 'blue' }">
+            <button>
                 Create Account
             </button>
 
