--- a/exam-project/src/app/views/register/register.component.html
+++ b/exam-project/src/app/views/register/register.component.html
@@ -74,14 +74,14 @@
                 </ng-container>
             </ng-container>
 
-            <button>
+            <butto>
                 Create Account
-            </button>
+                </button>
 
-            <p class="text-center">
-                Have an account?
-                <a routerLink="/login">Log In</a>
-            </p>
+                <p class="text-center">
+                    Have an account?
+                    <a routerLink="/login">Log In</a>
+                </p>
         </fieldset>
     </form>
 </div>
