--- a/exam-project/src/app/views/register/register.component.html
+++ b/exam-project/src/app/views/register/register.component.html
@@ -73,7 +73,7 @@
                     </p>
                 </ng-container>
             </ng-container>
-            //button group
+            //button
             <button>
                 Create Account
 
