--- a/exam-project/src/app/views/register/register.component.html
+++ b/exam-project/src/app/views/register/register.component.html
@@ -72,8 +72,9 @@
                         Repeat Password does not match password!
                     </p>
                 </ng-container>
-            </ng-container>
+                //button not working
 
+            </ng-container>
             <button>
                 Create Account
 
