--- a/exam-project/src/app/navbar/navbarComppnent/navbar.component.css
+++ b/exam-project/src/app/navbar/navbarComppnent/navbar.component.css
@@ -12,11 +12,7 @@
     height: 100px;
     width: 100px;
     float: flex;
-    padding: 20px;
-    margin: 0;
-    margin-left: 45%;
-    margin-right: auto;
-    margin-bottom: -5px;
+    margin: 1em auto;
     padding: 40px;
 
 
