--- a/exam-project/src/app/navbar/navbarComppnent/navbar.component.css
+++ b/exam-project/src/app/navbar/navbarComppnent/navbar.component.css
@@ -12,7 +12,7 @@
     height: 100px;
     width: 100px;
     float: flex;
-    margin: 1em auto;
+    margin: 0 auto;
     padding: 40px;
     display: block;
 
