--- a/exam-project/src/app/views/home/home.component.css
+++ b/exam-project/src/app/views/home/home.component.css
@@ -73,8 +73,8 @@
 
 h1 {
     text-align: center;
-    font-size: 50px;
-    padding: 50px;
+    font-size: 2em;
+    padding: 1em;
     background-color: #32d6c8;
     border-radius: 0.3em;
 
