--- a/exam-project/src/app/views/home/home.component.html
+++ b/exam-project/src/app/views/home/home.component.html
@@ -4,8 +4,9 @@
         <h1>Welcome to the Armwrestling challenge page!</h1>
         <div class="header-container">
             <div class="header">
-                <iframe width="1200" height="700" src="https://www.youtube.com/embed/Al0n1QiPDso?si=fR027cfV7FBIPJk5"
-                    title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
+                <iframe width="1200" height="700" class="video"
+                    src="https://www.youtube.com/embed/Al0n1QiPDso?si=fR027cfV7FBIPJk5" title="YouTube video player"
+                    frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
                 encrypted-media; gyroscope; picture-in-picture; web-share"
                     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
