--- a/exam-project/src/app/views/home/home.component.css
+++ b/exam-project/src/app/views/home/home.component.css
@@ -8,12 +8,18 @@
     margin-top: 1em;
 }
 
+.welcome .video {
+    width: 70%;
+    height: auto;
+    min-height: 10em;
+}
+
 .welcome h3 {
     background-color: #32d6c8;
     border-radius: 0.3em;
     width: 100%;
-    padding: 40px 0px;
-    font-size: 2rem;
+    padding: 1em;
+    font-size: 2em;
 
 
     text-align: center;
@@ -24,7 +30,7 @@
     padding: 1em;
     border-bottom: 1px solid #999;
     font-style: normal;
-    font-size: 2rem;
+    font-size: 1em;
 }
 
 
@@ -37,11 +43,11 @@
     display: flex;
 
     padding: 0;
-    margin-bottom: 3rem;
+    margin-bottom: 1em;
     text-align: center;
 
 
-    font-size: 2rem;
+    font-size: 1.5em;
     text-align: left;
 
 }
@@ -77,6 +83,7 @@ h1 {
     padding: 1em;
     background-color: #32d6c8;
     border-radius: 0.3em;
+    margin-top: 2em;
 
 }
 
@@ -86,15 +93,15 @@ h1 {
 }
 
 .buttons {
-    height: 50px;
-    width: 200px;
+    height: 3em;
+    width: 5em;
     text-align: center;
     color: white;
     text-decoration: none;
     background-color: #4ebced;
     border: solid 1px;
     border-radius: 0.3em;
-    padding: 20px;
+
     margin: 1em;
 
 }
