--- a/exam-project/src/app/views/home/home.component.css
+++ b/exam-project/src/app/views/home/home.component.css
@@ -101,7 +101,7 @@ h1 {
     background-color: #4ebced;
     border: solid 1px;
     border-radius: 0.3em;
-
+    padding: 2em;
     margin: 1em;
 
 }
