--- a/exam-project/src/app/views/home/home.component.css
+++ b/exam-project/src/app/views/home/home.component.css
@@ -45,7 +45,6 @@
     padding: 0;
     margin-bottom: 1em;
     text-align: center;
-    font-weight: 600;
 
     font-size: 1.5em;
     text-align: left;
@@ -112,4 +111,19 @@ h1 {
 
 .container {
     width: 100%;
+}
+
+.logged ul {
+    display: flex;
+}
+
+.logged ul li {
+    display: block;
+    margin: auto;
+}
+
+.logged ul li p {
+
+    border: none;
+
 }
