--- a/exam-project/src/app/views/home/home.component.css
+++ b/exam-project/src/app/views/home/home.component.css
@@ -17,10 +17,9 @@
 .welcome h3 {
     background-color: #32d6c8;
     border-radius: 0.3em;
-    width: 100%;
     padding: 1em;
     font-size: 2em;
-
+    margin: 1em 1em;
 
     text-align: center;
 
@@ -82,6 +81,7 @@ h1 {
     padding: 1em;
     background-color: #32d6c8;
     border-radius: 0.3em;
+    margin: 0 1em;
     margin-top: 2em;
 
 }
