--- a/exam-project/src/app/navbar/navbarComppnent/navbar.component.html
+++ b/exam-project/src/app/navbar/navbarComppnent/navbar.component.html
@@ -25,7 +25,7 @@
 
 
     </div>
-    <div class="navbar-actions">
-        <!-- Add login/logout buttons or user-related actions here -->
-    </div>
+    <!-- <div class="navbar-actions">
+         Add login/logout buttons or user-related actions here 
+    </div> -->
 </div>
