--- a/exam-project/src/app/views/offers/offers.component.html
+++ b/exam-project/src/app/views/offers/offers.component.html
@@ -1,5 +1,5 @@
 <!-- homepage-->
-<ng-container *ngIf="!editable">
+<!-- <ng-container *ngIf="!editable">
     <div *ngFor="let one of catalog" class="container">
         <div class="profile"><img src="./profile.png" alt="default user">
             <h3>Offer Info:</h3>
@@ -23,7 +23,7 @@
             <button (click)="edit(one._id)" class="edit-button">Edit</button>
         </div>
     </div>
-</ng-container>
+</ng-container> -->
 
 
 
