--- a/exam-project/src/app/views/offer/offer.component.html
+++ b/exam-project/src/app/views/offer/offer.component.html
@@ -1,5 +1,5 @@
 <!-- homepage-->
-<ng-container *ngIf="!editable">
+<ng-container>
     <div *ngFor="let one of catalog" class="container">
         <div class="profile"><img src="./profile.png" alt="default user">
             <h3>Offer Info:</h3>
