--- a/exam-project/src/app/views/register/register.component.html
+++ b/exam-project/src/app/views/register/register.component.html
@@ -1,6 +1,6 @@
 <!-- homepage -->
 <div class="container">
-    <form class="register" [formGroup]="form" (ngSubmit)="register()">
+    <form class="register" (ngSubmit)="register()">
 
         <fieldset>
             <h2>Registration Form</h2>
