--- a/exam-project/src/app/views/login/login.component.html
+++ b/exam-project/src/app/views/login/login.component.html
@@ -11,10 +11,10 @@
                     placeholder="simeon.bogdanov@gmail.com" [appValidators]="['bg', 'com']">
             </p>
             <ng-container *ngIf="inputEmail.touched">
-                <p class="errorRequired" *ngIf="inputEmail.errors?.['required'] ">
+                <p class="errorRequired" #inputEmail="ngModel" *ngIf="inputEmail.errors?.['required'] ">
                     Email is required!
                 </p>
-                <p *ngIf="inputEmail.errors?.['validateEmail']" class="error">
+                <p *ngIf="inputEmail?.errors?.['validateEmail']" class="error">
                     Email is not valid!
                 </p>
             </ng-container>
