--- a/exam-project/src/app/views/login/login.component.html
+++ b/exam-project/src/app/views/login/login.component.html
@@ -22,7 +22,7 @@
 
             <p class="emailPassword">
 
-                <input #password class="passwordInput" ngModel type="password" name="password" id="password"
+                <input #password="ngModel" class="passwordInput" ngModel type="password" name="password" id="password"
                     placeholder="password" required minlength="4">
             </p>
 
