--- a/exam-project/src/app/views/offer/offer.component.html
+++ b/exam-project/src/app/views/offer/offer.component.html
@@ -11,11 +11,7 @@
                 <p>Phone: </p>
                 <p>{{offer.phone}}</p>
             </div>
-            phone: string;
-            hand: string;
-            weight: string;
-            city: string;
-            bet: string;
+
             <div class="flex">
                 <p>Hand: </p>
                 <p>{{offer.hand}}</p>
@@ -33,7 +29,7 @@
                 <p>Bet: </p>
                 <p>{{offer.bet }}</p>
             </div>
-            <button (click)="edit(offer._id)" class="edit-button">Edit</button>
+            <!-- <button (click)="edit(offer._id)" class="edit-button">Edit</button> -->
         </div>
     </div>
 </ng-container>
