--- a/exam-project/src/app/views/offer/offer.component.html
+++ b/exam-project/src/app/views/offer/offer.component.html
@@ -1,6 +1,6 @@
 <!-- homepage-->
 <ng-container>
-    <div *ngFor="let offer of Object.keys(catalog)" class="container">
+    <div *ngFor="let offer of catalog" class="container">
         <div class="profile"><img src="./profile.png" alt="default user">
             <h3>Offer Info:</h3>
             <div class="flex">
