--- a/exam-project/src/app/views/offer/offer.component.css
+++ b/exam-project/src/app/views/offer/offer.component.css
@@ -1,11 +1,28 @@
 .container {
     display: flex;
-    margin: 15em auto;
+    margin: 10em 12em;
+    flex-wrap: wrap;
+}
+
+.img {
+    width: 100%;
+    height: 15em;
+}
+
+.flex {
+    padding-left: 2em;
+}
+
+.offer-info {
+    text-align: center;
 }
 
 .article-offer {
-
+    position: relative;
+    min-width: 23%;
+    margin: auto;
     display: block;
-    border: rgba(255, 255, 255, 0.767) solid 2px;
+    margin-top: 5em;
+    border: rgba(255, 255, 255, 0.767) solid 7px;
     background-color: rgba(255, 255, 255, 0.767);
 }
