--- a/exam-project/src/styles.css
+++ b/exam-project/src/styles.css
@@ -2,8 +2,9 @@
 body {
     margin: 0;
 
+
     background-image: url('./armwrestling-home-gym-v2-v0-o235obpup1ba1.jpg');
 
-
+    background-position: top;
 
 }
