--- a/exam-project/src/app/views/login/login.component.css
+++ b/exam-project/src/app/views/login/login.component.css
@@ -76,7 +76,7 @@ p.error {
     border-radius: 0.3em;
     padding: 0.6em 1.2em;
     margin-top: 1.5rem;
-    width: 90%;
+    width: 22em;
     outline: none;
 
 }
