--- a/exam-project/src/app/views/login/login.component.css
+++ b/exam-project/src/app/views/login/login.component.css
@@ -1,6 +1,6 @@
 /* login register forms  */
 form.login {
-    width: 40%;
+    width: 20em;
     margin: 2em auto 0;
     text-align: center;
 }
@@ -70,7 +70,7 @@ p.error {
 .login {
     color: black;
     cursor: pointer;
-    font-size: 30px;
+    font-size: 1em;
     border: none;
     border-radius: 0.3em;
     padding: 0.6em 1.2em;
@@ -111,9 +111,10 @@ p.error {
 
 .passwordInput,
 .emailInput {
-    min-width: 12em;
+    width: 15em;
     height: 50px;
     border: #32d6c8 10px solid;
     border-radius: 20%;
-    font-size: 1.5em;
+    font-size: 1em;
+
 }
