--- a/exam-project/src/app/views/login/login.component.css
+++ b/exam-project/src/app/views/login/login.component.css
@@ -96,15 +96,15 @@ p.error {
 
 
 .container {
-    margin-top: 240px;
-    margin-bottom: 600px;
+    margin-top: 12em;
+    margin-bottom: 20em;
 
     color: black;
 }
 
 .emailPassword {
-    margin-top: 100px;
-    margin-bottom: 100px;
+    margin-top: 2em;
+    margin-bottom: 2em;
 }
 
 
