--- a/exam-project/src/app/views/login/login.component.css
+++ b/exam-project/src/app/views/login/login.component.css
@@ -19,6 +19,7 @@ form.login {
 .login p {
     padding-bottom: 0;
     padding-top: 1.5rem;
+    color: red;
 }
 
 
@@ -55,7 +56,7 @@ form.login {
 
 
 /* errors  */
-p.error {
+.error {
     text-align: left;
     border-radius: 0.3em;
     color: red;
