--- a/exam-project/src/app/views/login/login.component.css
+++ b/exam-project/src/app/views/login/login.component.css
@@ -16,11 +16,7 @@ form.login {
     border-bottom: none;
 }
 
-.login p.error {
-    padding-bottom: 0;
-    padding-top: 1.5rem;
-    color: red;
-}
+
 
 
 .emailPassword {
@@ -57,10 +53,11 @@ form.login {
 
 /* errors  */
 .error {
-    text-align: left;
-    border-radius: 0.3em;
+    text-align: center;
     color: red;
-    padding-top: 0;
+    padding: 0;
+    padding-top: 24px;
+    margin: 0;
 }
 
 .input-error {
@@ -104,7 +101,7 @@ form.login {
 
 .emailPassword {
     margin-top: 2em;
-    margin-bottom: 2em;
+
 }
 
 
