--- a/exam-project/src/app/views/login/login.component.css
+++ b/exam-project/src/app/views/login/login.component.css
@@ -50,7 +50,6 @@ form.login {
 }
 
 
-
 /* errors  */
 .error {
     text-align: center;
@@ -58,6 +57,11 @@ form.login {
     padding: 0;
     margin: 0;
 }
+
+.pass {
+    margin-top: -2em;
+}
+
 
 .input-error {
     border-left-color: red;
