--- a/exam-project/src/app/navbar/navbarComppnent/navbar.component.html
+++ b/exam-project/src/app/navbar/navbarComppnent/navbar.component.html
@@ -13,7 +13,7 @@
 
             <a *ngIf="isLoggedIn" routerLink='create-offer' class="create-offer">Create Offer</a>
             <a *ngIf="!isLoggedIn" routerLink="login">Login</a>
-            <a *ngIf="isLoggedIn" routerLink='logout' (click)="logout()">Logout</a>
+            <a *ngIf="isLoggedIn" routerLink='logout'>Logout</a>
 
 
             <a *ngIf="!isLoggedIn" routerLink="register">Register</a>
