--- a/exam-project/src/app/views/offer/offer.component.html
+++ b/exam-project/src/app/views/offer/offer.component.html
@@ -25,7 +25,11 @@
             <div class="flex">
                 <p>Bet: {{offer.bet }}</p>
             </div>
-            <button (click)="edit(offer._id)" class="edit-button">Edit</button>
+            <ng-container *ngIf="offer.user == user$">
+
+                <button (click)="edit(offer._id)" class="edit-button">Edit</button>
+            </ng-container>
+
         </article>
     </ng-container>
 
