--- a/exam-project/src/app/views/offer/offer.component.html
+++ b/exam-project/src/app/views/offer/offer.component.html
@@ -25,7 +25,7 @@
             <div class="flex">
                 <p>Bet: {{offer.bet }}</p>
             </div>
-            <ng-container *ngIf="offer">
+            <ng-container *ngIf="false">
 
                 <button (click)="edit(offer._id)" class="edit-button">Edit</button>
             </ng-container>
