--- a/exam-project/src/app/views/offers/offers.component.html
+++ b/exam-project/src/app/views/offers/offers.component.html
@@ -9,7 +9,7 @@
                 <p>Names: {{offer.names}}</p>
             </div>
             <div class="flex">
-                <p>Email: {{offer}}</p>
+                <p>Email: {{offer.email}}</p>
             </div>
 
             <div class="flex">
