--- a/exam-project/src/app/views/offers/offers.component.html
+++ b/exam-project/src/app/views/offers/offers.component.html
@@ -20,7 +20,7 @@
                 <p>Weight: {{offer.weight }}</p>
             </div>
             <div class="flex">
-                <p>City: {{offer.city }}</p>
+                <p>City: {{offer.place }}</p>
             </div>
             <div class="flex">
                 <p>Bet: {{offer.bet }}</p>
