--- a/exam-project/src/app/views/register/register.component.html
+++ b/exam-project/src/app/views/register/register.component.html
@@ -39,7 +39,7 @@
 
             <p class="emailPassword">
 
-                <input #repassword="ngModel" class="passwordInput" ngModel type="repassword" name="repassword"
+                <input #repassword="ngModel" class="passwordInput" ngModel type="password" name="repassword"
                     id="repassword" placeholder="repeat password" required>
             </p>
 
