--- a/exam-project/src/app/views/offers/offers.component.html
+++ b/exam-project/src/app/views/offers/offers.component.html
@@ -25,7 +25,7 @@
             <div class="flex">
                 <p>Bet: {{offer.bet }}</p>
             </div>
-            <ng-container *ngIf="offer.email == user">
+            <ng-container>
 
                 <button class="edit-button">Edit</button>
             </ng-container>
