--- a/exam-project/src/app/views/offers/offers.component.html
+++ b/exam-project/src/app/views/offers/offers.component.html
@@ -26,8 +26,7 @@
                 <p>Bet: {{offer.bet }}</p>
             </div>
             <ng-container>
-
-                <button class="edit-button">Edit</button>
+                <button class="edit-button" (click)="edit(offer._id)">Edit</button>
             </ng-container>
 
         </article>
