--- a/exam-project/src/app/views/home/home.component.css
+++ b/exam-project/src/app/views/home/home.component.css
@@ -127,3 +127,42 @@ h1 {
     border: none;
 
 }
+
+.comments {
+    border: 2px solid rgb(255, 255, 255);
+    border-radius: 5em;
+    max-width: 50%;
+    margin: 2em auto;
+    padding: 1.5%;
+    background-color: rgba(255, 255, 255, 0.815);
+
+}
+
+.comments p {
+    display: block;
+    margin: auto;
+    color: black;
+    font-size: 2em;
+    border: none;
+
+}
+
+
+div p.line {
+
+    border-bottom: rgba(0, 0, 0, 0.438) dotted 2px;
+}
+
+div p span {
+
+    color: rgb(2, 151, 57);
+    font-size: 1.4em;
+
+}
+
+div p.line span {
+
+    color: rgb(199, 26, 26);
+    font-size: 1.4em;
+
+}
