--- a/exam-project/src/app/views/home/home.component.css
+++ b/exam-project/src/app/views/home/home.component.css
@@ -161,8 +161,7 @@ div p span {
 }
 
 div p.line span {
-
-    color: rgb(199, 26, 26);
+    бб color: rgb(199, 26, 26);
     font-size: 1.4em;
 
 }
